feat: configurar SMTP, CORS dinâmico e envio assíncrono de e-mail